--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,7 +8,10 @@
 
   <base href="/">
 </head>
-<body ng-app="app" class="container">
-  <ui-view></ui-view>
+<body ng-app="app">
+  <header></header>
+  <div class="container">
+    <ui-view></ui-view>
+  </div>
 </body>
 </html>
